# zero2prod

./: .gitignore  Cargo.toml  README.md  bacon.toml
.github/workflows/: default.yml
migrations/: 20240423190151_create_subscriptions_table.sql
scripts/: init_db.sh
src/: app.rs  configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscription.rs
tests/: health_check.rs  subscription.rs
