[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Adam Age<adam.age@bonterratech.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
tokio = {version = "1.46.1", features = ["full"]}

[dev-dependencies]
axum-test = "17.3.0"
reqwest = "0.12.22"
